--- a/CC Advanced Resource Processing/build.xml
+++ b/CC Advanced Resource Processing/build.xml
@@ -16,7 +16,7 @@
 
 	<!-- mod properties -->
 	<property name="mod.id" value="${ant.project.name}" />
-	<property name="mod.version" value="1.9.0" />
+	<property name="mod.version" value="1.9.0pr1" />
 	<property name="mod.api.files" value="xfel/mods/arp/api/**" />
 
 	<target name="clean">
