--- a/CC Advanced Resource Processing/.classpath
+++ b/CC Advanced Resource Processing/.classpath
@@ -10,6 +10,6 @@
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="Minecraft/jars/bin/natives"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry combineaccessrules="false" kind="src" path="/ComputerCraft (deobfuscated)"/>
+	<classpathentry kind="lib" path="D:/mcmoddev/mcp/lib/ComputerCraft.zip"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
