--- a/CC Advanced Resource Processing/.classpath
+++ b/CC Advanced Resource Processing/.classpath
@@ -9,5 +9,6 @@
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="Minecraft/jars/bin/natives"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/Minecraft/lib/ComputerCraft.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
